--- a/TDS_VDS_ADD_ON/TDS_VDS_ADD_ON.csproj
+++ b/TDS_VDS_ADD_ON/TDS_VDS_ADD_ON.csproj
@@ -46,8 +46,10 @@
     <Reference Include="SAPBusinessOneSDK" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ApInvoiceAddOn.cs" />
     <Compile Include="Global.cs" />
     <Compile Include="GlobalFunction.cs" />
+    <Compile Include="POAddOn.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Menu.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
