after adding all on first testing 20/5/25

--- a/TDS_VDS_ADD_ON/TDS_VDS_ADD_ON.csproj
+++ b/TDS_VDS_ADD_ON/TDS_VDS_ADD_ON.csproj
@@ -51,6 +51,7 @@
     <Compile Include="Global.cs" />
     <Compile Include="GlobalFunction.cs" />
     <Compile Include="GRPOAddOn.cs" />
+    <Compile Include="OutgoingPayment.cs" />
     <Compile Include="PaymentsMeansAddon.cs" />
     <Compile Include="POAddOn.cs" />
     <Compile Include="Program.cs" />
